[gd_scene load_steps=3 format=3 uid="uid://cqnqgxr02d0r6"]

[ext_resource type="Script" path="res://player_scripts/dodge_controller.gd" id="1_o04pd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sr0vr"]
size = Vector2(14, 17.5)

[node name="dodge" type="CharacterBody2D"]
collision_priority = 2.0
script = ExtResource("1_o04pd")

[node name="dodge_timer" type="Timer" parent="."]
one_shot = true

[node name="cooldown_timer" type="Timer" parent="."]

[node name="damage_detect" type="Area2D" parent="." groups=["0"]]

[node name="collision_shape_2d" type="CollisionShape2D" parent="damage_detect"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_sr0vr")

[node name="Node2D" type="Node2D" parent="."]

[node name="raycast_1" type="RayCast2D" parent="Node2D"]
target_position = Vector2(0, 12)

[node name="raycast_2" type="RayCast2D" parent="Node2D"]
target_position = Vector2(10, 11)

[node name="raycast_3" type="RayCast2D" parent="Node2D"]
target_position = Vector2(-10, 12)

[connection signal="timeout" from="dodge_timer" to="." method="stopped_timer"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="body_entered" from="damage_detect" to="." method="_on_area_2d_body_entered"]
